--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -60,6 +60,26 @@
     }
   }
 
+  &_mt130:not(:first-child) {
+    margin-top: 130px;
+
+    @include screen('xlg', max, 2) {
+      margin-top: 84px;
+    }
+
+    @include screen('lg', max, 2) {
+      margin-top: pxtovw(84, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-top: pxtovw(110, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-top: pxtovw(75, 375);
+    }
+  }
+
   &__header {
     display: block;
     width: 100%;
@@ -213,6 +233,16 @@
 
         @include screen('sm', max, 2) {
           margin-top: pxtovw(24, 375);
+        }
+      }
+
+      .nd-slider__container {
+        @include screen('md', max, 2) {
+          overflow: hidden;
+        }
+
+        @include screen('sm', max, 2) {
+          overflow: visible;
         }
       }
     }
@@ -422,6 +452,48 @@
     }
   }
 
+  &__offers {
+    display: block;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 35px;
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(35, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(35, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(35, 375);
+      }
+    }
+  }
+
+  &__offer {
+    display: block;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 40px;
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(40, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(40, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(30, 375);
+      }
+    }
+  }
+
   &_dpo {
     &:not(:first-child) {
       margin-top: 136px;
@@ -588,6 +660,26 @@
             margin-top: pxtovw(36, 375);
           }
         }
+      }
+    }
+  }
+
+  &__facility {
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 80px;
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(82, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(80, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(45, 375);
       }
     }
   }
