--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -67,9 +67,11 @@
         @include grid-row(1, 2);
 
         padding-left: 96px;
+        padding-bottom: 142px;
 
         @include screen('xlg', max, 2) {
           padding-left: 0;
+          padding-bottom: 0;
         }
 
         @include screen('md', max, 2) {
