--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -210,6 +210,7 @@ $nd-color-border3: #d4dfe2;
 $nd-color-input-placeholder: #4e4e4e;
 $nd-color-border4: #d1d8da;
 $nd-color-gray: #c6c6c6;
+$nd-color-gray-text8: #515151;
 
 // ##########
 // Transitions
