--- a/app/blocks/gallery/gallery.pug
+++ b/app/blocks/gallery/gallery.pug
@@ -14,13 +14,13 @@ mixin gallery(data)
                 +e.SOURCE(srcset=image)
                 +e.IMG(srcset=image)
     if data.buttons
-      +e.buttons
+      +e.buttons(class=(data.buttonsClass || ''))
         +e.button_prev.js-gallery-button-prev
           +icon('nd-slider-arrow')
         +e.button_next.js-gallery-button-next
           +icon('nd-slider-arrow')
     if data.dots
-      +e.pagination.js-gallery-pagination
+      +e.pagination.js-gallery-pagination(class=(data.dotsClass || ''))
     if data.gallerytag
       +e.A.fullscreen.js-nd-fancygallery(data-targets=data.gallerytag)
         +icon('fullscreen')
