--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -24,7 +24,7 @@ block content
 
       +nd-content-main
         +nd-section._space._mt114
-          +gallery({images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space-lead1.jpg", "assets/images/space-lead2.jpg", "assets/images/space-lead3.jpg", "assets/images/space-lead4.jpg"], gallerytag: "spacegallery", buttons: true}).__gallery.js-nd-gallery
+          +gallery({images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space-lead1.jpg", "assets/images/space-lead2.jpg", "assets/images/space-lead3.jpg", "assets/images/space-lead4.jpg"], gallerytag: "spacegallery", buttons: true, dots: true, dotsClass: ' nd-hide-from-sm'}).__gallery.js-nd-gallery
           +nd-section-header
             +e.boxes.nd-hide-from-md
               +nd-box._orange._size10
@@ -45,20 +45,27 @@ block content
         +nd-section._mt114
           +nd-section-header
             +nd-section-title._fz30 Facilities
-            +facility-list
+            +facility-list.__facility
 
-        +nd-section._mt80
+        +nd-section._mt130
           +nd-section-header
             +nd-section-title._fz30 Hot desks
-
+          +e.offers
+            each item in getData('nd-offers.json').hot
+              +offer-card-for-space(item, 'nd-section__offer')
         +nd-section._mt80
           +nd-section-header
             +nd-section-title._fz30 Fixed desks
+          +e.offers
+            each item in getData('nd-offers.json').fixed
+              +offer-card-for-space(item, ' nd-section__offer')
 
         +nd-section._mt80
           +nd-section-header
             +nd-section-title._fz30 Private offices
-
+          +e.offers
+            each item in getData('nd-offers.json').private
+              +offer-card-for-space(item, 'nd-section__offer')
 
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
