--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -6,7 +6,7 @@ block head
 block header
   - var headerClass = ' is-login nd-header_border'
   - var pageClass = ''
-  - var isMap = false
+  - var isMap = true
   - var host = true
 
 block content
