--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -79,3 +79,13 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes css-accordion {
+  0% {
+    max-height: 0;
+  }
+
+  100% {
+    max-height: 2000px;
+  }
+}
