fix for space page

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -199,6 +199,13 @@
     }
   }
 
+  &_sm-fz15 {
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+      line-height: (18 / 15);
+    }
+  }
+
   &_pad10 {
     padding: 0 10px;
 
@@ -212,6 +219,22 @@
 
     @include screen('sm', max, 2) {
       padding: 0 pxtovw(10, 375);
+    }
+  }
+
+  &_h30 {
+    height: 30px;
+
+    @include screen('lg', max, 2) {
+      height: pxtovw(30, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      height: pxtovw(30, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      height: pxtovw(30, 375);
     }
   }
 
