--- a/app/components/offer-card/offer-card.pug
+++ b/app/components/offer-card/offer-card.pug
@@ -49,5 +49,5 @@ mixin offer-card-for-space(item, cls)
             IMG(src=item.plan)
       +e.price!=(item.price.amount + ' <span class="offer-card__price-period" data-text="' + item.price.period + '" data-mobile-text="' + item.price.periodshort + '"></span>')
       +e.buttons
-        +nd-button().__button(href="#") Request reservation
-        +nd-button()._black.__button(href="#") Arrange viewing
+        +nd-button()._sm-fz15.__button(href="#") Request reservation
+        +nd-button()._sm-fz15._black.__button(href="#") Arrange viewing
