--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -92,7 +92,7 @@ block content
 
 block panels
   //- +main-menu
-  //- +offer-panel.hide-from-md
+  +nd-offer-panel.nd-hide-from-md
   .reservation-request-panel(data-rr-wrapper-block="panel")
   .reservation-request-popup(data-rr-wrapper-block="popup")
 
